# KingGroup_Nedokolenko

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  file_handler.cpp  main.cpp
src/data/: input.txt  input_false1.txt  input_false2.txt  input_true1.txt  input_true2.txt
src/include/: array_factory.h  array_transformer.h  array_utils.h  file_arrays.h  file_handler.h  type_handler.h
